# researcher

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  openclaw.json
.obsidian/: workspace.json
agents/autoresearch/workspace/autoresearch/: .gitignore  AGENT_RUNBOOK.md  implementation_plan.md  pyproject.toml  readme_ch_v4.md  readme_v4.md  rgb_ir_attention_rts.yaml
agents/autoresearch/workspace/autoresearch/auto_research/core/: types.py
agents/autoresearch/workspace/autoresearch/auto_research/generation/: __init__.py  code_snippets.py  config_generator.py
agents/autoresearch/workspace/autoresearch/auto_research/objective/: proxy_objective.py
agents/autoresearch/workspace/autoresearch/auto_research/planning/: idea_to_rts.py  requirement_generator.py
agents/autoresearch/workspace/autoresearch/auto_research/readers/: idea_reader.py
agents/autoresearch/workspace/autoresearch/auto_research/rts/: __init__.py
agents/autoresearch/workspace/autoresearch/auto_research/templates_docs/: implementation_plan_template.md
agents/autoresearch/workspace/autoresearch/docs/: adapter_protocol.md  ncl_case_validation_report_zh.md
agents/autoresearch/workspace/autoresearch/examples/: dummy_train.py
agents/autoresearch/workspace/autoresearch/tests/: test_implementation_planner.py  test_objective_and_study.py  test_optional_adapters.py  test_project_generator.py  test_project_validator.py  test_proxy_objective.py  test_recorder.py  test_requirement_generator.py  test_rts_to_experiment_workflow.py  test_safety.py  test_subprocess_adapter.py  test_task_card.py
judge/: USER.md
(+2235 files in other folders)
