[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AutoResearch"
version = "0.1.0"
description = "A general-purpose automatic training and hyperparameter optimization framework based on adapters and task cards."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "AutoResearch Contributors" }
]
dependencies = [
  "optuna>=3.0.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
wandb = [
  "wandb>=0.16.0",
]

[project.urls]
Homepage = "https://example.com/autoresearch"
Repository = "https://example.com/autoresearch"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["auto_research*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
